[package]
name = "helious-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 256
panic = "abort"
opt-level = 3
strip = "debuginfo"
debug-assertions = false

[dependencies]
hid-api-rs = { path = "D:/Programming/Projects/StrateimTech/hid-api-rs" }
structopt = "0.3.26"
rust_decimal = { version = "1.35", features = ["maths"] }
rust_decimal_macros = "1.35"
thread-priority = "1.1.0"
figlet-rs = "0.1.5"
terminal_size = "0.3.0"
